--- a/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.html
@@ -14,15 +14,13 @@
         crossorigin="anonymous"
       />
       <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-      />
+
       <title>Document</title>
     </head>
 
     <body>
-      <app-navbar-administrador></app-navbar-administrador>
+      <app-navbar-arrendador></app-navbar-arrendador>
+
       <div class="contenido-principal">
         <div class="textoPrincipal">
           <h1>Bienvenido al Portal Arrendador</h1>
@@ -73,6 +71,12 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="boton-flotante">
+        <a href="components/incidentes/registrar_incidentes">
+          <i class="material-icons">notification_important</i>
+          <span class="texto-flotante">Reportar Incidente</span>
+        </a>
       </div>
     </body>
   </html>
