--- a/SAFE_PARKING_FRONT/src/app/components/home-conductor/home-conductor.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/home-conductor/home-conductor.component.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-      <app-navbar-administrador></app-navbar-administrador>
+      <app-navbar-conductor></app-navbar-conductor>
 
       <div class="contenido-principal">
         <div class="textoPrincipal">
@@ -71,6 +71,12 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="boton-flotante">
+        <a href="components/incidentes/registrar_incidentes">
+          <i class="material-icons">notification_important</i>
+          <span class="texto-flotante">Reportar Incidente</span>
+        </a>
       </div>
     </body>
   </html>
