--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.html
@@ -203,6 +203,7 @@
               <div class="image-upload">
                 <input
                   type="file"
+                  class="example-full-width"
                   (change)="onFileSelected($event)"
                   accept="image/*"
                 />
