--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.html
@@ -6,8 +6,16 @@
     <title>Document</title>
   </head>
 
-  <body>
-    <app-navbar-administrador></app-navbar-administrador>
+  <body *ngIf="verificar()">
+    <div class="encabezados" *ngIf="validarRol()">
+      <app-navbar-administrador
+        *ngIf="role === 'administrador'"
+      ></app-navbar-administrador>
+      <app-navbar-conductor *ngIf="role === 'conductor'"></app-navbar-conductor>
+      <app-navbar-arrendador
+        *ngIf="role === 'arrendador'"
+      ></app-navbar-arrendador>
+    </div>
 
     <div class="container" style="text-align: center">
       <h2>Registro de Comentario</h2>
@@ -84,6 +92,14 @@
             Registrar
           </button>
           <button
+            *ngIf="role === 'conductor'"
+            mat-raised-button
+            [routerLink]="['/components/comentarios/listar_comentarios_user']"
+          >
+            Cancelar
+          </button>
+          <button
+            *ngIf="role === 'administrador'"
             mat-raised-button
             [routerLink]="['/components/comentarios/listar_comentarios_admin']"
           >
