--- a/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.css
@@ -2,7 +2,7 @@ body {
     background-color: #f2f2f2;
     margin-left: 250px;
     /*Tomar en cuenta esto*/
-    background: linear-gradient(to right, #11998e, #38ef7d); 
+    background: linear-gradient(to right, #11998e, #38ef7d);
   }
 
 /*Estilos de la fuente - Titulos y textos*/
@@ -12,19 +12,19 @@ h1 {
     font-weight: 600;
     padding-top: 30px;
   }
-  
+
   h2 {
     font-size: 20px;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
   }
-  
+
   h3 {
     font-size: 18px;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
   }
-  
+
   p {
     font-size: 16px;
     font-family: 'Inter', sans-serif;
@@ -38,7 +38,7 @@ h1 {
     margin: 0;
     text-align: center;
     height: 100%;
-    background: linear-gradient(to right, #11998e, #38ef7d); 
+    background: linear-gradient(to right, #11998e, #38ef7d);
     padding: 20px;
 
 }
@@ -69,4 +69,54 @@ img {
     padding: 20px;
     border: 1px solid #ddd;
     background-color: #f9f9f9;
+}
+.boton-flotante {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  background-color: #0a0a0a;
+  color: #fff;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+
+.boton-flotante:hover {
+  background-color: #48494b;
+}
+
+.boton-flotante a {
+  text-decoration: none;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  height: 100%;
+}
+
+.boton-flotante i {
+  font-size: 24px;
+  margin-top: 13px;
+}
+
+.texto-flotante {
+  position: absolute;
+  bottom: 30%;
+  right: 40%;
+  transform: translateX(-50%);
+  background-color: #090909;
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.boton-flotante:hover .texto-flotante {
+  opacity: 1;
 }
