--- a/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/listar-admin-horario/listar-admin-horario.component.html
@@ -7,8 +7,15 @@
   </head>
 
   <body *ngIf="verificar()">
-    <app-navbar-administrador></app-navbar-administrador>
-
+    <div class="encabezados" *ngIf="validarRol()">
+      <app-navbar-administrador
+        *ngIf="role === 'administrador'"
+      ></app-navbar-administrador>
+      <app-navbar-conductor *ngIf="role === 'conductor'"></app-navbar-conductor>
+      <app-navbar-arrendador
+        *ngIf="role === 'arrendador'"
+      ></app-navbar-arrendador>
+    </div>
     <h2 style="text-align: center">LISTA DE HORARIOS</h2>
 
     <div class="example-container mat-elevation-z8">
