--- a/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/buscar-incidente/buscar-incidente.component.html
@@ -6,9 +6,16 @@
     <title>Document</title>
   </head>
 
-  <body>
-    <app-navbar-administrador></app-navbar-administrador>
-
+  <body *ngIf="verificar()">
+    <div class="encabezados" *ngIf="validarRol()">
+      <app-navbar-administrador
+        *ngIf="role === 'administrador'"
+      ></app-navbar-administrador>
+      <app-navbar-conductor *ngIf="role === 'conductor'"></app-navbar-conductor>
+      <app-navbar-arrendador
+        *ngIf="role === 'arrendador'"
+      ></app-navbar-arrendador>
+    </div>
     <div class="form">
       <div class="generic-group">
         <label for="inputId">Ingrese el ID del incidente:</label>
