--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <app-navbar-administrador></app-navbar-administrador>
-
+  <body *ngIf="verificar()">
+    <div class="encabezados" *ngIf="validarRol()">
+      <app-navbar-administrador
+        *ngIf="role === 'administrador'"
+      ></app-navbar-administrador>
+      <app-navbar-conductor *ngIf="role === 'conductor'"></app-navbar-conductor>
+      <app-navbar-arrendador
+        *ngIf="role === 'arrendador'"
+      ></app-navbar-arrendador>
+    </div>
     <div class="container">
       <form [formGroup]="form" (submit)="registrar()" class="example-form">
         <div class="titulo">
@@ -66,9 +73,18 @@
           <button class="botonRegistro" mat-raised-button color="primary">
             Registrar
           </button>
+
           <button
+            *ngIf="role === 'conductor'"
             mat-raised-button
-            [routerLink]="['/components/incidentes/listar_admin_incidentes']"
+            [routerLink]="['/components/home_conductor']"
+          >
+            Cancelar
+          </button>
+          <button
+            *ngIf="role === 'arrendador'"
+            mat-raised-button
+            [routerLink]="['/components/home_arrendador']"
           >
             Cancelar
           </button>
