--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="buscar-localizaciones.component.css" />
   </head>
   <body>
-    <app-navbar-administrador></app-navbar-administrador>
-
+    <div class="header" *ngIf="verificar()">
+      <div class="encabezados" *ngIf="validarRol()">
+        <app-navbar-administrador
+          *ngIf="role === 'administrador'"
+        ></app-navbar-administrador>
+        <app-navbar-conductor
+          *ngIf="role === 'conductor'"
+        ></app-navbar-conductor>
+        <app-navbar-arrendador
+          *ngIf="role === 'arrendador'"
+        ></app-navbar-arrendador>
+      </div>
+    </div>
     <div class="container">
       <h2>Buscar Localización</h2>
       <input
