--- a/SAFE_PARKING_FRONT/src/app/components/navbar-conductor/navbar-conductor.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-conductor/navbar-conductor.component.css
@@ -8,7 +8,10 @@
     text-align: center;
     margin: 15px;
   }
-  
+  img {
+    max-width: 100px;
+    margin-left: 80px;
+  }
   /* Estilos del sidenav */
   .sidenav {
     width: 250px;
@@ -23,14 +26,14 @@
     overflow: auto
 
   }
-  
+
   .sidenav label:hover {
     color: #f1f1f1;
     background-color: #555555;
     transition: 200ms;
     border-radius: 7px;
   }
-  
+
   /* Estilos para los elementos de menú y submenús */
   .menu {
     cursor: pointer;
@@ -43,19 +46,19 @@
     align-items: center;
     /* Centra verticalmente los elementos dentro del label */
     line-height: 2; /* Ajusta la altura de línea para centrar verticalmente */
-  
+
   }
-  
+
   .menu i.material-icons {
     margin-right: 8px;
     /* Espacio entre el icono y el texto */
   }
-  
-  
+
+
   .menu-toggle {
     display: none;
   }
-  
+
   .sub-menu {
     list-style: none;
     padding: 0;
@@ -64,20 +67,20 @@
     overflow: hidden; /* Oculta el contenido que excede la altura máxima */
     transition: max-height 0.3s ease; /* Agrega una transición para max-height */
   }
-  
+
   .sub-menu li {
     margin: 10px 0;
   }
-  
+
   .sub-menu a {
     padding: 15px 8px 15px 32px;
     text-decoration: none;
     font-size: 20px;
     color: #d8d8d8;
     display: block;
-   
+
   }
-  
+
   .sub-menu a:hover {
     color: #f1f1f1;
     transition: 200ms;
@@ -85,12 +88,12 @@
     margin-left: 10px;
     border-radius: 7px;
   }
-  
+
   .menu-toggle:checked+label+.sub-menu {
     display: block;
     max-height: 100%; /* Despliega el submenú al hacer clic */
   }
-  
+
   /*FIN de Barra de navegacion Lateral-----------------*/
    /*Flechas de despliegue en el menu*/
    .icon-down {
@@ -98,18 +101,18 @@
     align-items: center;
     margin-left: auto; /* Mueve el contenedor de flechas hacia la derecha */
   }
-  
+
   .icon-up {
     display: none;
-    
+
     align-items: center;
     margin-left: auto; /* Mueve el contenedor de flechas hacia la derecha */
   }
-  
+
   .menu-toggle:checked+label .icon-down {
     display: none;
   }
-  
+
   .menu-toggle:checked+label .icon-up {
     display: inline-block;
     display: flex; /* Alinea las flechas a la derecha */
