--- a/SAFE_PARKING_FRONT/src/app/components/profile/profile.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/profile/profile.component.html
@@ -7,8 +7,18 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>User ID Card</title>
     </head>
-    <body>
-      <app-navbar-administrador></app-navbar-administrador>
+    <body *ngIf="verificar()">
+      <div class="encabezados" *ngIf="validarRol()">
+        <app-navbar-administrador
+          *ngIf="role === 'administrador'"
+        ></app-navbar-administrador>
+        <app-navbar-conductor
+          *ngIf="role === 'conductor'"
+        ></app-navbar-conductor>
+        <app-navbar-arrendador
+          *ngIf="role === 'arrendador'"
+        ></app-navbar-arrendador>
+      </div>
       <div class="container" section *ngIf="verificar()">
         <div class="card" *ngIf="validarRol()">
           <div class="card-header">
