--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.css
@@ -1,4 +1,3 @@
-
 /* Estilos para los campos de formulario */
 .container {
   margin-bottom: 50px;
@@ -13,53 +12,46 @@
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
-  height: 100%;
-  padding: 20px;
-
+  margin-left: 260px;
+  padding: 50px;
+  height: 100vh;
 }
 /*Estilos para los botones*/
 
 button {
-    margin: 10px;
+  margin: 10px;
 }
-.botonRegistro{
-    background-color: #11998e;
-    color: #fff;
-  }
-.example-form{
+.botonRegistro {
+  background-color: #11998e;
+  color: #fff;
+}
+.example-form {
   max-height: 600px;
   background-color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-
-
 }
-.formularios{
+.formularios {
   display: flex;
   border-radius: 8px;
   height: 90%;
-
 }
-.example-full-width{
+.example-full-width {
   margin: 5px;
   width: 90%;
-
 }
-.secciones{
-    margin: 15px;
-    width: auto; /* Expand to full width */
+.secciones {
+  margin: 15px;
+  width: 70%; /* Expand to full width */
   background-color: rgb(221, 221, 221);
   align-items: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-
-
+  border-radius: 8px;
 }
-.sub-seccion{
+.sub-seccion {
   display: flex;
   width: 92.5%;
   margin: 0 auto;
-
 }
 .image-upload {
   max-width: 90%;
@@ -72,9 +64,7 @@ img {
   max-width: 40%;
   max-height: 40%;
   margin-top: 10px;
-
 }
 input[type="file"] {
   background-color: rgb(173, 173, 182);
 }
-
