--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/modificar-usuario/modificar-usuario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/modificar-usuario/modificar-usuario.component.css
@@ -4,7 +4,9 @@
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  max-width: 1000px;
+  /* Centra horizontalmente */
+  max-width: 100%;
+  padding: 20px;
 }
 
 body {
@@ -45,13 +47,12 @@ button {
 
 .secciones {
   margin: 15px;
-  width: 300px; /* Expand to full width */
+  width: 70%; /* Expand to full width */
   background-color: rgb(221, 221, 221);
   align-items: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 }
-
 .sub-seccion {
   display: flex;
   width: 92.5%;
