agragado la traza de ruta

--- a/SAFE_PARKING_FRONT/src/app/components/comentario/listar-usuario-comentario/listar-usuario-comentario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/listar-usuario-comentario/listar-usuario-comentario.component.html
@@ -44,6 +44,13 @@
               }}
             </p>
             <p class="user-title">
+              <strong>Codigo de Estacionamiento:</strong>
+              {{
+                comentario.reservaEstacionamiento.horarioEstacionamiento
+                  .estacionamiento.idEstacionamiento
+              }}
+            </p>
+            <p class="user-title">
               <strong> Dirección:</strong>
               {{
                 comentario.reservaEstacionamiento.horarioEstacionamiento
