--- a/SAFE_PARKING_FRONT/src/app/components/comentario/listar-usuario-comentario/listar-usuario-comentario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/listar-usuario-comentario/listar-usuario-comentario.component.css
@@ -3,7 +3,6 @@ body {
   background: linear-gradient(to right, #11998e, #38ef7d);
   margin-left: 250px;
   padding: 30px;
-
 }
 .comment-list {
   display: flex;
@@ -35,14 +34,12 @@ body {
   height: 40px;
   border-radius: 50%;
   margin-right: 16px;
-
 }
-
 
 .user-avatar {
   width: 40px;
   height: 40px;
-  background-color: #007bff;
+  background-color: #00ff99;
   border-radius: 50%;
   margin-right: 16px;
 }
