Cambios CSS responsive - Home

--- a/SAFE_PARKING_FRONT/src/app/components/home/home.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.component.css" />
     <link rel="Icon" href="/assets/image/Logo_verde.png" />
     <link rel="shortcut icon" href="favicon.ico" mce_href="favicon.ico" type="image/x-icon" />
