--- a/SAFE_PARKING_FRONT/src/app/components/navbar/navbar.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar/navbar.component.css
@@ -20,3 +20,6 @@
   transition: background-color 250ms ease; /* Agrega una transición suave */
   border-radius: 20px; /* Bordes redondeados */
 }
+.mat-toolbar{
+  min-width: 475px;
+}
