--- a/SAFE_PARKING_FRONT/src/app/components/footer/footer.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/footer/footer.component.css
@@ -5,7 +5,6 @@ footer {
     height: 300px;
     background-color: #000000;
     margin-top: auto;
-    padding: 20px;
     min-width: 475px;
 }
 footer .container{
@@ -90,3 +89,13 @@ footer .Copyright hr{
     height: 1px;
     background-color: #7a7a7a;
 }
+
+@media(max-width: 1200px){
+   
+
+    /*Footer----------------------*/
+    footer{
+        height: auto;
+    }
+}
+
