--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-usuario-vehiculos/listar-usuario-vehiculos.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/listar-usuario-vehiculos/listar-usuario-vehiculos.component.html
@@ -27,7 +27,7 @@
         <mat-card
           *ngFor="let vehiculo of dataSource.data"
           class="estacionamiento-card"
-          [style.background-color]="vehiculo.colorVehiculo || 'white'"
+          [style.background-color]="'white'"
         >
           <!-- Utiliza la directiva [src] para asignar la URL de la imagen -->
           <img
